# stellarAid-contract

./: .gitignore  Cargo.toml
.claude/: settings.json
audit/: README.md
campaign/: Cargo.toml
campaign/fuzz/: .gitignore  Cargo.toml  README.md
campaign/fuzz/fuzz_targets/: fuzz_donate.rs  fuzz_release_milestone.rs
campaign/src/: lib.rs  types.rs
campaign/src/test/: formal_verification_tests.rs  helpers.rs  integration_tests.rs
contracts/campaign/: Cargo.toml
contracts/campaign/src/: lib.rs
contracts/donation/: Cargo.toml
contracts/donation/src/: lib.rs  test.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: errors.rs  lib.rs  storage.rs  token.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: types.rs
contracts/withdrawal/: Cargo.toml
contracts/withdrawal/src/: lib.rs
crates/tools/event-monitor/: README.md
docs/: UPGRADE.md
docs/wallets/: FREIGHTER.md
factory/src/: lib.rs
multi_wallet_session/src/: data_types.rs  lib.rs
scripts/: deploy-testnet.sh  prepare-audit.sh
sdk/: Cargo.toml  donation-service.ts
sdk/bindings/: package.json  tsconfig.json
sdk/bindings/src/wallet/: albedo.ts  freighter.ts  index.ts  (+3 more)
sdk/src/: lib.rs  logging.rs
sdk/src/horizon/: client.rs
sdk/src/setup/: token_setup.rs
sdk/src/soroban/: rpc_client.rs
sdk/wallets/: freighter.ts  index.ts  networkGuard.ts  package.json  tsconfig.json
tests/wallet_integration/: Cargo.toml
tests/wallet_integration/src/: donate_flow_test.rs  helpers.rs
wallet_sign_timeout/src/: data_types.rs  lib.rs
worker/: Cargo.toml
worker/src/: main.rs
